# powerbi-ai-copilot

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  abc.txt  docker-compose.yml  pyproject.toml  requirement.txt  test_local.py
.github/workflows/: cd.yml  ci.yml  tests.yml
backend/: app.py  config.py  main.py  requirements.txt
backend/agents/: __init__.py  base_agent.py
backend/agents/analytics_agent/: agent.py  prompts.py
backend/agents/dax_agent/: agent.py  prompts.py
backend/agents/insight_agent/: agent.py  prompts.py
backend/agents/planner_agent/: agent.py  prompts.py
backend/agents/rag_agent/: agent.py  prompts.py
backend/agents/response_agent/: agent.py  prompts.py
backend/analytics_engine/: __init__.py  insight_generator.py
backend/analytics_engine/anomaly_detection/: __init__.py  (+3 more)
backend/api/: __init__.py  routes.py  schemas.py
backend/config/: __init__.py  constants.py  logging.py  settings.py
backend/context_engine/: __init__.py  context_builder.py  filter_context.py  page_context.py  report_context.py  selection_context.py  slicer_context.py  visual_context.py
backend/cross_visual_reasoning/: __init__.py  metric_dependencies.py  page_analysis.py  report_analysis.py  visual_relationships.py
backend/dax_copilot/: __init__.py  dax_debugger.py  dax_explainer.py  dax_generator.py  dax_optimizer.py
backend/evaluations/: __init__.py
backend/intent_engine/: __init__.py  classifier.py  intent_schema.py  routing_rules.py
backend/memory/: __init__.py  context_window.py  conversation_memory.py  memory_store.py  session_manager.py
backend/models/: __init__.py  request_models.py  response_models.py
backend/observability/: __init__.py  metrics.py  prompt_monitoring.py  telemetry.py  tracing.py
backend/orchestration/: __init__.py  intent_router.py  orchestrator.py  response_builder.py  state_manager.py  workflow_manager.py
backend/rag/: __init__.py
backend/report_documentation/: __init__.py  lineage_builder.py  measure_documenter.py  page_documenter.py  report_documenter.py
backend/schemas/: __init__.py  analytics.py  chat.py  context.py  insight.py  response.py
backend/services/: analytics_service.py  context_builder.py  groq_service.py  prompt_service.py  rag_service.py
backend/vectorstore/: embeddings.py  index_builder.py  retriever.py
backend/what_if_engine/: __init__.py  impact_analysis.py  scenario_builder.py  simulator.py
docs/: api.md  api_documentation.md  architecture.md  deployment.md  evaluation.md  pipeline.md  powerbi_runtime_context.md  prompts.md  setup_guide.md
frontend/custom_visual/: package-lock.json  package.json  pbiviz.json  tsconfig.json
frontend/pbiviz/: capabilities.json  package.json  pbiviz.json
infrastructure/docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
infrastructure/kubernetes/: backend.yaml  ingress.yaml  postgres.yaml  redis.yaml
infrastructure/terraform/: main.tf
powerbi/dax/: calculated_columns.dax  measures.dax
powerbi/pbix/: Parental_leave_policies.pbix
powerbi/sample_data/: data_dictionary.csv  parental_leave.csv
tests/unit/: test_main.py
(+91 files in other folders)
