[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powerbi-ai-copilot"
version = "1.0.0"
description = "AI-powered analytics copilot for Power BI dashboards"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Power BI AI Copilot Team"},
]
keywords = ["powerbi", "ai", "copilot", "analytics", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Office/Business",
]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "pandas==2.1.3",
    "numpy==1.26.2",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "redis==5.0.1",
    "openai==1.3.6",
    "groq==0.4.1",
    "langchain==0.1.0",
    "faiss-cpu==1.7.4",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.1.1",
    "PyJWT==2.8.1",
    "aiohttp==3.9.1",
    "httpx==0.25.2",
    "python-json-logger==2.0.7",
    "prometheus-client==0.19.0",
    "scikit-learn==1.3.2",
    "scipy==1.11.4",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "requests==2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "black==23.12.0",
    "flake8==6.1.0",
    "isort==5.13.2",
    "mypy==1.7.1",
]

[project.urls]
Homepage = "https://github.com/yourusername/powerbi-ai-copilot"
Documentation = "https://github.com/yourusername/powerbi-ai-copilot/docs"
Repository = "https://github.com/yourusername/powerbi-ai-copilot"
Issues = "https://github.com/yourusername/powerbi-ai-copilot/issues"

[tool.setuptools]
packages = ["backend", "frontend"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
ignore_missing_imports = true
exclude = ["venv/", "tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "--strict-markers"
markers = [
    "asyncio: marks tests as async",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]
